--- a/PacketPool -Lock/PacketPool/PacketPool.vcxproj
+++ b/PacketPool -Lock/PacketPool/PacketPool.vcxproj
@@ -150,7 +150,7 @@
     <ClInclude Include="lib\Profiler.h" />
     <ClInclude Include="lib\System_Log.h" />
     <ClInclude Include="MemoryPool.h" />
-    <ClInclude Include="LockFreePacketPool.h" />
+    <ClInclude Include="PacketPool.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -161,7 +161,7 @@
     <ClCompile Include="lib\Profiler.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="LockFreePacketPool.cpp" />
+    <ClCompile Include="PacketPool.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
